# click-me

./: .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yaml  광고매니지먼트_폴더구조_역할분담.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  dev.py  pyproject.toml
backend/agents/agent-ad-creator/: graph.py  nodes.py  state.py
backend/agents/agent-ad-management/: graph.py  nodes.py  state.py
backend/agents/agent-ad-simulator/: graph.py  nodes.py  state.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_expand_campaign_objective.py  003_add_generator_tables.py  004_add_simulation_weight_socioeconomic.py  005_simulations_created_by_nullable.py
backend/api/: main.py
backend/api/routers/: admin.py  ads.py  auth.py  billing.py  chat.py  company.py  dashboard.py  generator.py  inquiries.py  management.py  personas.py  projects.py  simulate.py
backend/api/routers/simulation/: __init__.py  router.py
backend/core/: auth.py  config.py  db.py  models.py  schemas.py
backend/domain/billing/: __init__.py  toss_client.py
backend/domain/billing/service/: billing_service.py
backend/domain/generator/adapters/: instagram.py
backend/domain/generator/contracts/: enums.py  schemas.py  templates.py
backend/domain/generator/graph/: pipeline.py  state.py
backend/domain/generator/graph/nodes/: __init__.py  candidate_gen.py  explain.py  product_analysis.py  qa.py  strategy.py  template_select.py
backend/domain/generator/pipeline/: image_generator.py  product_analyzer.py  quality_checker.py  strategy_planner.py  template_selector.py
backend/domain/generator/service/: generator_service.py
backend/domain/management/: approval.py  demo.py  wiring.py
backend/domain/management/adapters/: mock.py
backend/domain/management/adapters/meta/: client.py  reader.py  writer.py
backend/domain/management/agents/: diagnosis.py  regeneration.py  regeneration_tools.py
backend/domain/management/contracts/: enums.py  fault_injection.py  platform.py  policy.py  schemas.py
backend/domain/management/contracts/examples/: action_proposal_tier1.json  action_proposal_tier3.json  action_result_failed.json  action_result_pending.json  action_result_success.json  anomaly_event_edge_case.json  anomaly_event_normal.json
backend/domain/management/detection/: deterministic_dx.py  exposure_model.py  guardrails.py
backend/domain/management/detection/service/: detection_service.py
backend/domain/management/evals/: acceptance.py  diagnosis_eval.py  regeneration_eval.py
backend/domain/management/execution/: audit_log.py  executor.py  state_machine.py  tier.py
backend/domain/management/execution/service/: execution_service.py
backend/domain/simulation/: README.md  models.py  validation.py  wiring.py  아키텍처 설명 읽고 삭제하셔도 됩니다.md
backend/domain/simulation/adapters/: __init__.py  gemini_engine.py  gemini_narrator.py  memory_store.py  mock_engine.py
backend/domain/simulation/adapters/gemini/: __init__.py  _common.py  ad_interpreter.py  qa.py  reaction.py  rubric.py
backend/domain/simulation/aggregation/: aggregator.py
backend/domain/simulation/contracts/: __init__.py  enums.py  schemas.py
backend/domain/simulation/data/: loader.py  sources.md
backend/domain/simulation/data/distributions/: ocean_age_bands.json  (+1 more)
backend/domain/simulation/graph/: reaction_graph.py  run_graph.py
backend/domain/simulation/panel/: build_cli.py  builder.py
backend/domain/simulation/repositories/: panel_repository.py  persistence.py  simulation_repository.py
backend/domain/simulation/sampling/: persona_sampler.py
backend/domain/simulation/service/: simulation_service.py
backend/scripts/: generate_golden_samples.py  management_demo.py
backend/services/: simulation_service.py
backend/tests/: conftest.py
backend/tests/billing/: test_billing_router.py  test_billing_service.py
backend/tests/generator/: test_instagram_adapter.py  test_pipeline_topology.py  test_qa_checks.py  test_s3_storage.py  test_templates.py
backend/tests/harness/: test_ssr_scorer.py
backend/tests/management/: helpers.py  test_contracts.py  test_execution_units.py  test_executor_gates.py  test_meta_writer.py  test_regeneration_agent.py  test_regeneration_tools.py
backend/tests/simulation/: test_aggregator.py  test_data_loader.py  test_gemini_engine.py  test_panel_builder.py  test_persistence.py  test_persona_sampler.py  test_pipeline_e2e.py  test_reaction_graph.py  test_repositories.py  test_validation.py
backend/tools/: utils.py
backend/tools/ad_analysis/: vision.py
backend/tools/persona/: factory.py
backend/tools/search/: rag.py
backend/tools/simulation/: anchors.py  deliberation.py  exposure.py  ssr_scorer.py
backend/tools/storage/: s3.py  sqs.py
(+99 files in other folders)
